[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.3.0",
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "geohash2>=1.1",
    "gunicorn>=25.3.0",
    "httpx>=0.28.1",
    "openai>=2.20.0",
    "psycopg2-binary>=2.9.11",
    "supabase>=2.28.2",
    "python-telegram-bot>=20.0",
]
